# cavity-volumes-pbc

./: CMakeLists.txt  Gromacs.h  README.md  Regular_triangulation_cell_base_with_id_and_wcc_3.h  cavity_volumes_pbc.cpp  cfglinestream.h  config_file.cpp  config_file.h  endianswap.h  sastry_subsimplex_volume.c  sastry_subsimplex_volume.h  skin_surface.cpp  skin_surface.h  traj_reader.h  traj_reader_gromacs.h  traj_reader_nice.h
examples/: traj.gro
examples/C6mim-NTf2_IonicLiquid/: cavity_volumes_pbc.inp  traj.rad
examples/MFM-300_Al_MOF/: Rscan_cavity_volumes_pbc.inp  Rscan_cavity_volumes_pbc.inp.tmpl  Rscan_results.txt  cavity_volumes_pbc.inp  mfm-300_Al.rad  mfm-300_Al.trr  mfm-300_Al_2x2x2.gro  scan_rprobe.sh
examples/ZIF-8_MOF/: cavity_volumes_pbc.inp  zif8.gro  zif8.rad  zif8_traj_dt1ns.xtc
non-periodic/: CMakeLists.txt  README.md  cavity_volumes_fin.cpp  config_file_fin.cpp  config_file_fin.h
non-periodic/example/: DhaAWT.gro  DhaAWT.rad  DhaAWT_traj.xtc  cavity_volumes_fin.inp
